...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchUserActivity">

    <EditText
        android:id="@+id/edt_search"
        style="@style/AppTheme.SearchView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@drawable/background_search"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_users"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:background="@drawable/background_white_radius"
            android:clipToPadding="false"
...
